[package]
name = "ya-gcp"
version = "0.7.7"
authors = ["Renar Narubin <renar@standard.ai>"]
edition = "2018"
description = "APIs for using Google Cloud Platform services"
readme = "README.md"
repository = "https://github.com/standard-ai/ya-gcp"
license = "MIT OR Apache-2.0"
keywords = ["gcp", "gcs", "pubsub", "google", "cloud"]
categories = ["api-bindings", "asynchronous"]
documentation = "https://docs.rs/ya-gcp"

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "pubsub_stream"
path = "examples/pubsub_stream.rs"
required-features = ["pubsub"]

[[example]]
name = "storage_get_object"
path = "examples/storage_get_object.rs"
required-features = ["storage"]

[features]
default = ["rustls", "tokio"]

rustls = ["hyper-rustls"]
openssl = ["hyper-openssl"] # TODO maybe should be native-tls instead?

# an internal feature used by services running grpc
grpc = ["tonic", "prost", "prost-types", "tower", "derive_more"]

pubsub = ["grpc", "uuid", "async-stream", "pin-project", "async-channel", "tokio", "tokio/time"]
storage = ["tame-gcs"]

# whether to include service emulator implementations. useful for testing
emulators = ["tempdir", "tokio", "tokio/process"]

[dependencies]
cfg-if = "1"
futures = "0.3"
http = "0.2"
humantime-serde = "1"
hyper = "0.14"
paste = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
yup-oauth2 = "6.7"

async-stream = { version = "0.3", optional = true }
async-channel = { version = "1", optional = true }
derive_more = { version = "0.99", optional = true }
hyper-openssl = { version = "0.9", optional = true }
hyper-rustls = { version = "0.22", features = ["rustls-native-certs"], optional = true }
pin-project = { version = "1", optional = true }
prost = { version = "0.9", optional = true }
prost-types = { version = "0.9", optional = true }
tame-gcs = { version = "0.10.0", optional = true }
tempdir = { version = "0.3", optional = true }
tokio = { version = "1", features = ["time"], optional = true }
tonic = { version = "0.6.2", optional = true }
tower = { version = "0.4", features = ["make"], optional = true }
uuid = { version = "0.8.1", features = ["v4"], optional = true }

[dev-dependencies]
approx = "0.5"
async-stream = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
serde_json = "1"
structopt = "0.3" # for examples
tokio = { version = "1.4.0", features = ["rt-multi-thread", "time", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.2"

[package.metadata.cargo-udeps.ignore]
# hyper-openssl is only used (and thus detected) if the feature "openssl" is
# enabled _and_ "rustls" is disabled. CI builds with --all-features, so udeps
# fails unless we ignore the package explicitly
normal = ["hyper-openssl"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
